fix change department bug
